--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && npm run build:vite",
+    "build:vite": "vite build",
     "watch": "tsc && vite build --watch"
   },
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=18.5.0"
   },
   "dependencies": {
     "@fluentui/react": "^8.105.3",
@@ -22,12 +23,12 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^7.0.1",
     "react-router-dom": "^6.8.1",
-   
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
     "remark-supersub": "^1.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-json": "^6.1.0",
     "@types/dompurify": "^3.0.5",
     "@types/lodash-es": "^4.17.7",
     "@types/react": "^18.0.27",
