--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && npm run build:vite",
+    "build": "tsc && npm run build",
     "build:vite": "vite build",
     "watch": "tsc && vite build --watch"
   },
